JEDIT 4.2 VERSION HISTORY

{{{ Version 4.2pre6

{{{ Syntax Highlighting

- Added Apache httpd.conf syntax highlighting (Ollie Rutherfurd).

- Improved Scheme syntax highlighting (Stephen Bartlett).

- Improved MS-DOS batch file syntax highlighting (Mirco Bova).

- Added MCS51 (8051) microcontroller assembly syntax highlighting
  (Mirco Bova).

- Updated XSLT syntax highlighting (Magnus Henriksson).

}}}
{{{ Miscellaneous

- Pressing TAB with a rectangular selection now inserts a tab at the
  appropriate column, instead of shifting indent to the right.

- Added Up/Down arrows to the file system browser's colors option pane.
  This lets you change the order that file names are matched against the
  patterns in the list.

- Collapsed/expanded arrow icons in file system browser should now look
  good with a dark background as well (Kris Kopicki).

- The option for what to do when files change on disk in the General
  pane of the Utilities->Global Options dialog box is now tri-state:

  - Do nothing
  - Prompt
  - Automatically reload

  The first and last options correspond to the previous setting in
  4.2pre5. The second option is similar to the behavior in jEdit 4.1,
  except all changed buffers are listed in one dialog box.

- Edit->Complete Word now completes words in all visible buffers (ie,
  showing in at least one edit pane). So as a poor man's CodeAid, you
  can open a text file listing Java classes and methods in a zero-height
  split.

- The plugin manager now has better handling of loading and unloading
  plugins with dependencies.

- jEdit now attempts to auto-detect the encoding of XML files by looking
  for an <?xml ... encoding="..." ?> processing instruction on the first
  line of the file. Note that if this processing instruction is present,
  an encoding selected in the File->Open dialog box is ignored.

}}}
{{{ Bug Fixes

- Fixed problems with structure matching when soft wrap is on, if the